[gd_scene load_steps=46 format=3 uid="uid://8dkruhhct78k"]

[ext_resource type="Script" path="res://MainCharacter.gd" id="1_xchv8"]
[ext_resource type="Shader" path="res://BlinkShader.gdshader" id="2_1pbkl"]
[ext_resource type="Texture2D" uid="uid://ia8c84iwwjkc" path="res://green_character.png" id="2_cquam"]
[ext_resource type="Texture2D" uid="uid://b11qvslj4npsf" path="res://purple_character.png" id="2_wjrju"]
[ext_resource type="Texture2D" uid="uid://qd8xnixdf8j2" path="res://purple_hand.png" id="3_3ja4d"]
[ext_resource type="Texture2D" uid="uid://dj2niwmgj6cvf" path="res://green_hand.png" id="3_60y2i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hvira"]
resource_local_to_scene = true
shader = ExtResource("2_1pbkl")
shader_parameter/active = false
shader_parameter/tint = Color(0.996078, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_di2ta"]
resource_local_to_scene = true
shader = ExtResource("2_1pbkl")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_kkpby"]
radius = 6.40003

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ie4dr"]
resource_local_to_scene = true
shader = ExtResource("2_1pbkl")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_x45is"]
radius = 48.0

[sub_resource type="Animation" id="Animation_65jfh"]
resource_name = "Punch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(28.7999, -19.2001), Vector2(-0.00018692, -51.2), Vector2(19.1999, -35.2001), Vector2(28.7999, -19.2001)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -1.0472, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32.0001, -19.1999)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand1/Area2D/HandCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ob81i"]
resource_name = "PunchIdle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28.7999, -19.2001)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32.0001, -19.1999)]
}

[sub_resource type="Animation" id="Animation_gmd1p"]
resource_name = "PunchToSpear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(28.7999, -19.2001), Vector2(12.7999, -25.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-32.0001, -19.1999), Vector2(-0.000101089, -28.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.29203, -1.22247]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.22247, -1.29203]
}

[sub_resource type="Animation" id="Animation_pvvdv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28.7999, -19.2001)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32.0001, -19.1999)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand1/Area2D/HandCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Hand2:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hhd1x"]
resource_name = "Spear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(12.7999, -25.6), Vector2(25.6, -12.8001), Vector2(25.6, -12.8001), Vector2(-0.000160217, -44.8), Vector2(12.7999, -25.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.000101089, -28.8), Vector2(19.1999, -28.8001), Vector2(19.1999, -28.8001), Vector2(-0.000230789, -64), Vector2(-0.000101089, -28.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-1.29203, -0.482603, -0.482603, 0.0, -1.29203]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-1.22247, -0.589269, -0.589269, -0.0461417, -1.22247]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"EnableWeapon"
}, {
"args": [],
"method": &"DisableWeapon"
}]
}

[sub_resource type="Animation" id="Animation_h1iyc"]
resource_name = "SpearIdle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12.7999, -25.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.000101089, -28.8)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.29203]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand2:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.22247]
}

[sub_resource type="Animation" id="Animation_d1mei"]
resource_name = "BowIdle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.000127792, -35.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.000118256, -32)]
}

[sub_resource type="Animation" id="Animation_nflo3"]
resource_name = "Bow"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.000127792, -35.2), Vector2(-0.000185013, -51.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.44892, -1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.000118256, -32), Vector2(-9.15527e-05, -25.6)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"LoadWeapon"
}]
}

[sub_resource type="Animation" id="Animation_mppxw"]
resource_name = "ReleaseBow"
length = 0.02
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Hand1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-0.000185013, -51.2), Vector2(-0.000127792, -35.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/Hand1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body/Hand2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5708, -1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Body/Hand2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.02),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-9.15527e-05, -25.6), Vector2(-0.000118256, -32)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"ReleaseAttack"
}, {
"args": [],
"method": &"UnloadWeapon"
}, {
"args": [],
"method": &"FireWeapon"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5h5sh"]
_data = {
"Bow": SubResource("Animation_nflo3"),
"BowIdle": SubResource("Animation_d1mei"),
"Punch": SubResource("Animation_65jfh"),
"PunchIdle": SubResource("Animation_ob81i"),
"PunchToSpear": SubResource("Animation_gmd1p"),
"RESET": SubResource("Animation_pvvdv"),
"ReleaseBow": SubResource("Animation_mppxw"),
"Spear": SubResource("Animation_hhd1x"),
"SpearIdle": SubResource("Animation_h1iyc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_06mmg"]
animation = &"Bow"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_owib6"]
animation = &"BowIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vi8uc"]
animation = &"PunchIdle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qde15"]
animation = &"SpearIdle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a3bwm"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7u2t6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_prw5n"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2sfma"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wkv4q"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1gdnr"]
state_machine_type = 1
states/BowIdle/node = SubResource("AnimationNodeAnimation_owib6")
states/BowIdle/position = Vector2(595, 142)
states/PunchIdle/node = SubResource("AnimationNodeAnimation_vi8uc")
states/PunchIdle/position = Vector2(481, 80)
states/SpearIdle/node = SubResource("AnimationNodeAnimation_qde15")
states/SpearIdle/position = Vector2(472, 305)
states/Start/position = Vector2(213, 100)
transitions = ["SpearIdle", "PunchIdle", SubResource("AnimationNodeStateMachineTransition_a3bwm"), "PunchIdle", "SpearIdle", SubResource("AnimationNodeStateMachineTransition_7u2t6"), "Start", "PunchIdle", SubResource("AnimationNodeStateMachineTransition_prw5n"), "PunchIdle", "BowIdle", SubResource("AnimationNodeStateMachineTransition_2sfma"), "BowIdle", "PunchIdle", SubResource("AnimationNodeStateMachineTransition_wkv4q")]
graph_offset = Vector2(106, 41)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k4f7q"]
animation = &"Punch"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8iek4"]
animation = &"ReleaseBow"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_68t44"]
animation = &"Spear"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cqr4k"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_um505"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ffupy"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_71ow0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ra4ks"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s5gsf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pwf75"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_57frg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1yt7e"]
states/Bow/node = SubResource("AnimationNodeAnimation_06mmg")
states/Bow/position = Vector2(508, 60)
states/Idle/node = SubResource("AnimationNodeStateMachine_1gdnr")
states/Idle/position = Vector2(333, 137)
states/Punch/node = SubResource("AnimationNodeAnimation_k4f7q")
states/Punch/position = Vector2(297, 24)
states/ReleaseBow/node = SubResource("AnimationNodeAnimation_8iek4")
states/ReleaseBow/position = Vector2(640, 95)
states/Spear/node = SubResource("AnimationNodeAnimation_68t44")
states/Spear/position = Vector2(432, 24)
states/Start/position = Vector2(161, 112)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_cqr4k"), "Idle", "Punch", SubResource("AnimationNodeStateMachineTransition_um505"), "Punch", "Idle", SubResource("AnimationNodeStateMachineTransition_ffupy"), "Idle", "Spear", SubResource("AnimationNodeStateMachineTransition_71ow0"), "Spear", "Idle", SubResource("AnimationNodeStateMachineTransition_ra4ks"), "Idle", "Bow", SubResource("AnimationNodeStateMachineTransition_s5gsf"), "Bow", "ReleaseBow", SubResource("AnimationNodeStateMachineTransition_pwf75"), "ReleaseBow", "Idle", SubResource("AnimationNodeStateMachineTransition_57frg")]
graph_offset = Vector2(-61, -75)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vw1rp"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false

[sub_resource type="LabelSettings" id="LabelSettings_6eidr"]
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(1, 0.0392157, 0, 1)

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_xchv8")
AlliedSprite = ExtResource("2_cquam")
AlliedHandSprite = ExtResource("3_60y2i")

[node name="Body" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_hvira")
rotation = 1.5708
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_wjrju")

[node name="Hand1" type="Sprite2D" parent="Body"]
texture_filter = 1
material = SubResource("ShaderMaterial_di2ta")
position = Vector2(28.7999, -19.2001)
texture = ExtResource("3_3ja4d")

[node name="Area2D" type="Area2D" parent="Body/Hand1"]

[node name="HandCollision" type="CollisionShape2D" parent="Body/Hand1/Area2D"]
shape = SubResource("CircleShape2D_kkpby")
disabled = true

[node name="Hand2" type="Sprite2D" parent="Body"]
texture_filter = 1
material = SubResource("ShaderMaterial_ie4dr")
position = Vector2(-32.0001, -19.1999)
texture = ExtResource("3_3ja4d")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
position_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x45is")

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5h5sh")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_1yt7e")
anim_player = NodePath("../Anim")
active = true

[node name="MultSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_vw1rp")

[node name="LabelHolder" type="Node2D" parent="."]

[node name="Label" type="Label" parent="LabelHolder"]
unique_name_in_owner = true
offset_left = -192.0
offset_top = -96.0
offset_right = 192.0
offset_bottom = -59.0
text = "Name"
label_settings = SubResource("LabelSettings_6eidr")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Body/Hand1/Area2D" to="." method="_on_area_2d_body_entered"]
